# autoplaylist

./: README.md  __init__.py  autoplaylist.py  autoplaylist.service  make_systemd_file.py  mpd_autoplaylist.py  setup.cfg  setup.py
mpd_autoplaylist/: __main__.py  autoplaylist.py
