[metadata]
name = mpd_autoplaylist
version = 1.0.0
author = Wonko
author_email = wonko@hanstool.org
url = https://github.com/wonkodv/autoplaylist
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = mpd_autoplaylist
python_requires = >=3.6
